# template-docker-mlflow-s3

./: .env  .gitignore  2024.xlsx.dvc  administration.ipynb  config.yaml  docker-compose.yml  pyproject.toml  tracker.ipynb
.dvc/: config
data/minio_data/.minio.sys/: format.json
data/minio_data/mlflow-bucket/1/083dc1944e9c4fd884b2101a1a210ee4/artifacts/model/input_example.json/9e1de375-df75-444c-a84b-5eef740d178f/: part.1
data/minio_data/mlflow-bucket/1/083dc1944e9c4fd884b2101a1a210ee4/artifacts/model/serving_input_example.json/e5d41172-d74b-4787-9e6e-3253d660d56e/: part.1
data/minio_data/mlflow-bucket/1/2a561ee62fcc481f8d6d1dc29bcce3dd/artifacts/model/input_example.json/52acffa5-41f1-4633-9cb2-d32a5cafd258/: part.1
data/minio_data/mlflow-bucket/1/2a561ee62fcc481f8d6d1dc29bcce3dd/artifacts/model/serving_input_example.json/986da884-2925-47d7-930e-e6c1fca93784/: part.1
data/minio_data/mlflow-bucket/1/66c106ed60874d6e8909848c150c6921/artifacts/model/input_example.json/5eac4b6a-9afc-4dc0-a091-a5b90f8a4808/: part.1
data/minio_data/mlflow-bucket/1/66c106ed60874d6e8909848c150c6921/artifacts/model/serving_input_example.json/db5c51eb-d44d-4d65-a11d-90b6accabd24/: part.1
data/minio_data/mlflow-bucket/1/6ada69d8434f4f5b82971607a51be6fd/artifacts/model/input_example.json/0c2559a4-82c0-48ca-bc50-4759d0f5d0eb/: part.1
data/minio_data/mlflow-bucket/1/6ada69d8434f4f5b82971607a51be6fd/artifacts/model/serving_input_example.json/b6a261e0-f579-406b-a9f3-e32ca68a7c32/: part.1
(+18 files in other folders)
