[tool.poetry]
name = "mlflow-keyclock"
version = "0.1.0"
description = ""
authors = ["Eugene Chernov <ev7080@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.19.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
boto3 = "^1.36.4"
pynvml = "^12.0.0"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
